--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>3dImage.js</title>
+    <title>tilted.js</title>
   </head>
   <body>
-    3dImage.js
-    <script src="dist/3dimage.js"></script>
+    <div id="header">tilted.js</div>
+    <script src="dist/tilted.js"></script>
     <script>
-      image();
+      tilted('header');
     </script>
   </body>
 </html>
