--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>tilted.js</title>
-    <script src="https://use.fontawesome.com/982f9b7898.js"></script>
-  </head>
-  <body>
-    <div id="header">tilted.js
+
+<head>
+  <meta charset="utf-8">
+  <title>tilted.js</title>
+  <script src="https://use.fontawesome.com/982f9b7898.js"></script>
+</head>
+
+<body>
+  <div id="header">tilted.js
     <div><a class="nostyle" href="https://github.com/PashanIrani/tilted.js">Download from Github: <i class="fa fa-github" aria-hidden="true"></i></a></div>
+
   </div>
-    <script src="dist/tilted.js"></script>
-    <script>
-      tilted('header');
-    </script>
-  </body>
+  <div id="test">ohhahah</div>
+  <script src="dist/tilted.js"></script>
+  <script>
+    tilted('header', {
+      intensity: 40
+    });
+  </script>
+</body>
+
 </html>
