--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <script src="dist/tilted.js"></script>
   <script>
     tilted('header', {
-      intensity: 40
+      intensity: 40,
+      onHover: true
     });
   </script>
 </body>
