changed demo styles

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <script src="dist/tilted.js"></script>
   <script>
     tilted('header', {
-      intensity: 60,
-      onHover: true
+      intensity: 20
     });
   </script>
 </body>
