--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <script src="dist/tilted.js"></script>
   <script>
     tilted('header', {
-      intensity: 20
+      intensity: 20,
+      onHover: false
     });
   </script>
 </body>
