getting ready for release 1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div><a class="nostyle" href="https://github.com/PashanIrani/tilted.js">Download from Github: <i class="fa fa-github" aria-hidden="true"></i></a></div>
   </div>
   <script src="dist/tilted.js"></script>
+  <script src="dist/main.js"></script>
   <script>
     tilted('header', {
       intensity: 25,
