--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 
 <body>
   <div id="splash">
+    <div class="centerView">
     <div id="header">tilted.js
       <div><a class="nostyle" href="https://github.com/PashanIrani/tilted.js">Download from Github: <i class="fa fa-github" aria-hidden="true"></i></a></div>
     </div>
   </div>
-  <div id="desc">
-    <div class="prop">intensity: controlles the intensity (defualt: 12)</div>
+  <!--div>
+      <p>Scroll down for more Info:</p>
+      <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
   </div>
+  </div>
+  <div id="desc">
+    <h1>Installation:</h1>
+    <div class="prop">intensity: controlles the intensity (defualt: 12)</div>
+  </div-->
   <script src="dist/tilted.js"></script>
   <script src="dist/main.js"></script>
   <script>
