--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <h2>CDN</h2>
     <div class="prop">&lt;script src=&quot;https://cdn.jsdelivr.net/npm/tilted.js/dist/tilted.js&quot;&gt;&lt;/script&gt;</div>
     <hr>
-    <h1>Instruction</h1>
+    <h1>Instructions</h1>
     <div>
     <div class="sideByside">
       <p>Add your &nbsp;<b class="spaced">HTML</b>&nbsp; element</p>
       <pre class="code"><code class="html">&lt;div id='thisIsaID' &gt;this element will be tiled&lt;/div&gt;</code></pre>
     </div>
     <div class="sideByside">
-      <p>Add your &nbsp;<b class="spaced">CSS</b>&nbsp; element</p>
+      <p>Add your &nbsp;<b class="spaced">CSS</b>&nbsp;</p>
       <pre class="code"><code class="css">#thisIsaID {
         background-color: #212121;
         border-radius: 10px;
@@ -66,10 +66,10 @@
 
     <div id="properties">
       <h1>Properties</h1>
-      <div class="prop-noBack">intensity: controlles the intensity (default: 12)</div>
-      <div class="prop-noBack">onHover: controlles if tilt happens only on hover (default: false)</div>
+      <div class="prop-noBack">intensity: controls the intensity (default: 12)</div>
+      <div class="prop-noBack">onHover: controls if tilt happens only on hover (default: false)</div>
       <div class="prop-noBack">disableX: enables/disables tilt on the X axis (default: false)</div>
-      <div class="prop-noBack">disableY: controlles the intensity (default: false)</div>
+      <div class="prop-noBack">disableY: enables/disables tilt on the Y axis (default: false)</div>
       <div class="prop-noBack">invert: tilt will be inverted (default: false)</div>
     </div>
   </div>
