--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div>
     <div class="sideByside">
       <p>Add your &nbsp;<b class="spaced">HTML</b>&nbsp; element</p>
-      <pre class="code"><code class="html">&lt;div id='thisIsaID' &gt;this element will be tiled&lt;/div&gt;</code></pre>
+      <pre class="code"><code class="html">&lt;div id='thisIsaID' &gt;this element will be tilted&lt;/div&gt;</code></pre>
     </div>
     <div class="sideByside">
       <p>Add your &nbsp;<b class="spaced">CSS</b>&nbsp;</p>
@@ -62,7 +62,7 @@
       invert: false
     });</code></pre>
     <h3 style="margin: 5px 0px">Code from above, in Action:</h2>
-    <div id='thisIsaID' style="background-color: #212121; border-radius: 10px; padding: 50px; display: inline-block">this element will be tiled</div>
+    <div id='thisIsaID' style="background-color: #212121; border-radius: 10px; padding: 50px; display: inline-block">this element will be tilted</div>
 
     <div id="properties">
       <h1>Properties</h1>
