--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript">
     hljs.initHighlightingOnLoad();
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/tilted.js/dist/tilted.js"></script>
+  <script src="dist/tilted.js"></script>
 </head>
 
 <body>
